--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "mailparser": "3.6.5",
     "markdown-it": "13.0.2",
     "module-alias": "2.2.3",
+    "nodemon": "^3.0.1",
     "notion-to-md": "3.1.1",
     "pidusage": "3.0.2",
     "plist": "3.1.0",
