--- a/package.json
+++ b/package.json
@@ -150,6 +150,9 @@
   },
   "devDependencies": {
     "@microsoft/eslint-formatter-sarif": "3.0.0",
+    "@playwright/browser-chromium": "^1.38.1",
+    "@playwright/browser-firefox": "^1.38.1",
+    "@playwright/browser-webkit": "^1.38.1",
     "@types/aes-js": "3.1.2",
     "@types/crypto-js": "4.1.2",
     "@types/eslint": "8.44.3",
@@ -194,6 +197,7 @@
     "mockdate": "3.0.5",
     "nock": "13.3.3",
     "nodemon": "3.0.1",
+    "playwright": "^1.38.1",
     "prettier": "3.0.3",
     "remark": "13.0.0",
     "remark-frontmatter": "3.0.0",
